# email_tui

./: CMakeLists.txt  README.md  main.cpp
documentation/: ConceptsInCpp.md  How are emails exchanged.md
include/: certificateVerifier.hpp  config.toml  configHelper.hpp  main-helper.hpp  storeHelper.hpp  transportHelper.hpp
sending mail/: CMakeLists.txt  config.toml
sending mail/src/: example6_timeoutHandler.hpp  main.cpp
src/: config.toml  main.cpp
